--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,13 @@ FodyWeavers.xsd
 
 # Ignore .idea files
 .idea/
+
+# BeatPulse healthcheck temp database
+healthchecksdb
+/UI/WebStore/wwwroot/lib
+/UI/WebStore/wwwroot/js/site.min.js.gz
+/UI/WebStore/wwwroot/js/site.min.js
+/UI/WebStore/wwwroot/js/site.js
+/UI/WebStore/wwwroot/css/site.min.css
+/UI/WebStore/wwwroot/css/site.css
+
