--- a/Services/WebStore.ServiceHosting/appsettings.json
+++ b/Services/WebStore.ServiceHosting/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=WebStore-Core;Integrated Security=True;"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=WebStore-DB2;Integrated Security=True;"
   },
   "Logging": {
     "LogLevel": {
@@ -9,6 +9,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "WebApiURL": "http://localhost:5001"
+  "AllowedHosts": "*"
 }
